4 tasks solved
UserID deleted
Messenger added
Errors reworked
Tags reworked